# ai-research-agent

./: .env.example  .gitignore  Dockerfile  README.md  api.py  claude_desktop_config.example.json  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  run_e2e_live.py  start.sh
src/: agent.py  bot.py  config.py  graph.py  llm.py  logging_config.py  scheduler.py  storage.py  whatsapp.py
src/analyzers/: __init__.py  pipeline.py  sentiment.py  summarizer.py  topic_extractor.py
src/api/: app.py
src/clients/: __init__.py  llm_factory.py  ollama_client.py  openrouter_client.py
src/collectors/: __init__.py  arxiv.py  arxiv_collector.py  base.py  crypto.py  crypto_collector.py  cryptonews.py  ddg.py  github.py  github_collector.py  news.py  news_collector.py  reddit.py  reddit_collector.py  serper.py  stocks.py  stocks_collector.py  tmz.py  weather.py  weather_collector.py  wiki.py  wiki_collector.py
src/storage/: __init__.py  database.py  models.py  repository.py
src/tools/: mcp_server.py  retry.py  vector_store.py
tests/: conftest.py  test_collectors.py  test_e2e.py  test_graph.py
tests/unit/: test_analyzers.py  test_api.py  test_clients.py  test_collectors.py  test_retry.py  test_storage.py
